# chester-sdk

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .west.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Kconfig  Kconfig.accel  Kconfig.batt  Kconfig.ble  Kconfig.bsp  Kconfig.button  Kconfig.chester_x0d  Kconfig.config  Kconfig.defaults  Kconfig.hygro  Kconfig.led  Kconfig.lrw  Kconfig.lte  Kconfig.rtc  Kconfig.shell  Kconfig.test  Kconfig.therm  LICENSE  Makefile.mk  README.md  TODO.md  annotated.html  annotated_dup.js  classes.html  ctr__a1_8h.html  ctr__a1_8h.js  ctr__a1_8h__incl.map  ctr__a1_8h__incl.md5  ctr__a1_8h_source.html  ctr__accel_8h.html  ctr__accel_8h.js  ctr__accel_8h_source.html  (+680 more)
applications/_legacy/input/: CMakeLists.txt  prj.conf
applications/_legacy/input/src/: app_config.c  app_config.h  app_shell.c  main.c
applications/clime/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/clime/codec/: cbor-decoder.yaml  cs-decoder.js  nr-decoder.js  ttn-decoder.js
applications/clime/src/: app_backup.c  app_backup.h  app_cbor.c  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_iaq.c  app_iaq.h  app_init.c  app_loop.c  app_lrw.c  app_measure.c  app_measure.h  app_send.c  app_send.h  app_sensor.c  app_sensor.h  app_shell.c  app_tamper.c  app_tamper.h  app_work.c  app_work.h  feature.h  main.c  msg_key.h  variant.h
applications/counter/: CMakeLists.txt  prj.conf
applications/counter/codec/: cbor-decoder.yaml
applications/counter/src/: app_cbor.c  app_cbor.h  app_config.c  app_config.h  app_counter.c  app_counter.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_loop.c  app_loop.h  app_measure.c  app_measure.h  app_send.c  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  main.c  msg_key.h
applications/current/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/current/codec/: cbor-decoder.yaml  cs-decoder.js  nr-decoder.js  ttn-decoder.js
applications/current/src/: app_backup.c  app_ble_svc.c  app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_init.h  app_loop.c  app_loop.h  app_measure.c  app_measure.h  app_power.c  app_send.c  app_send.h  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  feature.h  main.c  msg_key.h  variant.h
applications/demo/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/demo/boards/: chester_nrf52840.overlay
applications/demo/codec/: cbor-decoder.yaml  cbor-encoder.yaml
applications/demo/src/: app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_init.h  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  feature.h  main.c
applications/meteo/: CMakeLists.txt  Kconfig  Kconfig.variant  VERSION  app.overlay  prj.conf  project.yaml
applications/meteo/child_image/: mcuboot.conf
applications/meteo/codec/: cbor-decoder.yaml  cs-decoder.js  decoder.js
applications/meteo/src/: app_backup.c  app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_lambrecht.c  app_lambrecht.h  app_lrw.c  app_modbus.c  app_modbus.h  app_power.h  app_send.c  app_send.h  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  feature.h  main.c  msg_key.h  variant.h
applications/meteo/sysbuild/: mcuboot.conf
applications/push/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/push/child_image/: mcuboot.conf
applications/push/codec/: cbor-decoder.yaml  codec.js  cs-codec.js  decoder.js  nr-decoder.js
applications/push/src/: app_backup.c  app_backup.h  app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_loop.c  app_loop.h  app_lrw.c  app_lrw.h  app_measure.c  app_measure.h  app_power.c  app_send.c  app_send.h  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  feature.h  main.c  msg_key.h
applications/range/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/range/codec/: cbor-decoder.yaml
applications/range/src/: app_backup.c  app_backup.h  app_cbor.c  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_init.h  app_power.c  app_send.c  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  feature.h  main.c  msg_key.h  variant.h
applications/scale/: CMakeLists.txt  Kconfig  Kconfig.variant  app.overlay  prj.conf  project.yaml
applications/scale/codec/: cbor-decoder.yaml  cs-decoder.js
applications/scale/src/: app_backup.c  app_backup.h  app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_handler.c  app_handler.h  app_init.c  app_loop.c  app_loop.h  app_lrw.c  app_lrw.h  app_measure.c  app_measure.h  app_power.c  app_power.h  app_send.c  app_send.h  app_sensor.c  app_sensor.h  app_shell.c  app_work.c  app_work.h  feature.h  main.c  msg_key.h
applications/serial/: CMakeLists.txt  Kconfig  Kconfig.variant  VERSION  app.overlay  pm_static.yml  prj.conf  project.yaml
applications/serial/codec/: cbor-decoder.yaml  cs-decoder.js  test_float16.js
applications/serial/src/: app_backup.c  app_backup.h  app_cbor.c  app_cbor.h  app_codec.h  app_config.c  app_config.h  app_data.c  app_data.h  app_device.c  app_device.h  app_driver.c  app_driver.h  app_handler.c  app_handler.h  app_init.c  app_init.h  app_lrw.c  app_lrw.h  app_modbus.c  app_modbus.h  app_power.c  app_power.h  app_send.c  app_sensor.c  app_sensor.h  app_serial.c  app_serial.h  app_shell.c  app_shell.h  app_work.c  app_work.h  feature.h  main.c
lib/: Kconfig  (+1 more)
tests/subsys/ctr_cloud/: CMakeLists.txt  prj.conf  testcase.yaml
tests/subsys/ctr_lte_v2/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
(+1511 files in other folders)
