add_subdirectory(drivers)
add_subdirectory(subsys)

zephyr_include_directories(include)

zephyr_library()

zephyr_library_sources_ifdef(CONFIG_CTR_ACCEL src/ctr_accel.c)
zephyr_library_sources_ifdef(CONFIG_CTR_BLE src/ctr_ble.c)
zephyr_library_sources_ifdef(CONFIG_CTR_BSP src/ctr_bsp_i2c.c)
zephyr_library_sources_ifdef(CONFIG_CTR_BSP src/ctr_bsp.c)
zephyr_library_sources_ifdef(CONFIG_CTR_BUTTON src/ctr_button.c)
zephyr_library_sources_ifdef(CONFIG_CTR_CHESTER_X0D src/ctr_chester_x0d.c)
zephyr_library_sources_ifdef(CONFIG_CTR_CHESTER_X3 src/ctr_chester_x3.c)
zephyr_library_sources_ifdef(CONFIG_CTR_CONFIG src/ctr_config.c)
zephyr_library_sources_ifdef(CONFIG_CTR_HYGRO src/ctr_hygro.c)
zephyr_library_sources_ifdef(CONFIG_CTR_LED src/ctr_led.c)
zephyr_library_sources_ifdef(CONFIG_CTR_RTC src/ctr_rtc.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_adc.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_buf.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_bus_i2c.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_chester_z.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_drv_ads122c04.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_drv_sht30.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_drv_tmp112.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_sys.c)
zephyr_library_sources_ifdef(CONFIG_CTR_SDK src/ctr_util.c)
zephyr_library_sources_ifdef(CONFIG_CTR_TEST src/ctr_test.c)
zephyr_library_sources_ifdef(CONFIG_CTR_THERM src/ctr_therm.c)

zephyr_library_link_libraries_ifdef(CONFIG_CTR_BLE MCUMGR)
