[tool.poetry]
name = "uart_to_csv"
version = "0.1.0"
description = ""
authors = ["Pavel Hübner <pavel.hubner@hardwario.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyserial = "^3.5"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
